--- a/portaljcr/WebContent/resources/css/custom.css
+++ b/portaljcr/WebContent/resources/css/custom.css
@@ -561,3 +561,33 @@ span.nmbr {
   color: #fff !important;
 }
 
+.linhaCinza {
+	background-color: #f5f5f5 !important;
+}
+
+.linhaBranca {
+	background-color: #ffffff !important;
+}
+
+.linhaAmarela {
+	background-color: #fdfcd7 !important;
+}
+
+.linhaAzul {
+	background-color: #d9f3ff !important;
+}
+
+.colunaCinza {
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,f6f6f6+47,ededed+100;White+3D+%231 */
+	background: rgb(255,255,255); /* Old browsers */
+	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(246,246,246,1) 47%,rgba(237,237,237,1) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(246,246,246,1) 47%,rgba(237,237,237,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed',GradientType=0 ); /* IE6-9 */
+}
+
+.close {
+    opacity: 1 !important;
+    color: #fff !important;
+    text-shadow: 0 1px 0 #9F262D !important;
+}
