Ajuste de Ponto

--- a/portaljcr/WebContent/pages/templates/layout.xhtml
+++ b/portaljcr/WebContent/pages/templates/layout.xhtml
@@ -20,21 +20,21 @@
 	<h:outputStylesheet library="css" name="custom.css"/>
 	<ui:insert name="head" />
 </h:head>
-<h:body styleClass="hold-transition skin-red-light sidebar-mini">
+<h:body styleClass="hold-transition skin-red-light sidebar-mini"> 
 	<div class="wrapper">
-<!-- 		<div class="modal fade" id="modal-default"> -->
-<!-- 			<div class="modal-dialog"> -->
-<!-- 				<div class="modal-content"> -->
-<!-- 					<div class="modal-body" style="padding:0px;border:0px"> -->
-<!-- 						<button type="button" class="close" data-dismiss="modal" -->
-<!-- 							aria-label="Close"> -->
-<!-- 							<span><i class="fa fa-times" style="color: #000; padding-right:5px;padding-top:2px;"></i></span> -->
-<!-- 						</button> -->
-<!-- 						<p:graphicImage name="/images/Teste.png" style="width:100%;position: absolute;z-index:-1;"/> -->
-<!-- 					</div> -->
-<!-- 				</div> -->
-<!-- 			</div> -->
-<!-- 		</div> -->
+		<div class="modal fade" id="modal-default">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-body" style="padding:0px;border:0px">
+						<button type="button" class="close" data-dismiss="modal"
+							aria-label="Close">
+							<span><i class="fa fa-times" style="color: #000; padding-right:5px;padding-top:2px;"></i></span>
+						</button>
+						<p:graphicImage name="/images/Teste.png" style="width:100%;position: absolute;z-index:-1;"/>
+					</div>
+				</div>
+			</div>
+		</div>
 		<ui:include src="/pages/templates/header.xhtml" />
 		<aside class="main-sidebar"> 
 			<section class="sidebar"><ui:include src="/pages/templates/menu.xhtml" /> </section>
