ajuste de ponto 99%

--- a/portaljcr/WebContent/pages/templates/menu.xhtml
+++ b/portaljcr/WebContent/pages/templates/menu.xhtml
@@ -81,7 +81,7 @@
 							<span>Holerite</span>
 						</p:link>
 					</li>
-					<li class="#{activeSubmenu eq 'ajustePonto' ? 'active' : ''}" jsf:rendered="#{loginController.hasGroup(['ADMINISTRADOR'])}">
+					<li class="#{activeSubmenu eq 'ajustePonto' ? 'active' : ''}" >
 						<p:link href="/pages/recursosHumanos/ajustarPonto/autenticar_ajustarPonto.xhtml" ajax="false">
 							<i class="fa fa-pencil-square-o"></i>
 							<span>Ajuste de Ponto</span>
