--- a/portaljcr/WebContent/pages/templates/menu.xhtml
+++ b/portaljcr/WebContent/pages/templates/menu.xhtml
@@ -87,6 +87,12 @@
 							<span>Ajuste de Ponto</span>
 						</p:link>
 					</li>
+					<li class="#{activeSubmenu eq 'consultarPonto' ? 'active' : ''}" >
+						<p:link href="/pages/recursosHumanos/consultarPonto/listar_consultarPonto.xhtml" ajax="false">
+							<i class="fa fa-search"></i>
+							<span>Consultar Ponto</span>
+						</p:link>
+					</li>
 				</ul>
 			</li>
 			
